# CASMO

./: .gitignore  CASMO_THEORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  casmo.py  pyproject.toml  requirements.txt  setup.py  verify_installation.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  tests.yml
benchmarks/: README.md
benchmarks/b1_grokking/: README.md  train.py
benchmarks/b1_grokking/reports/: REPORT.md
benchmarks/b1_noisy_cifar10/: README.md  b1_noisy_cifar10.ipynb  train.py
benchmarks/b2_grokking/: README.md  train.py
benchmarks/b2_grokking/reports/: REPORT.md
benchmarks/b2_long_tail_cifar100/: README.md  b2_long_tail_cifar100.ipynb  b3_long_tail_cifar100.ipynb  train.py
benchmarks/b2_long_tail_cifar100/reports/: REPORT.md
benchmarks/b2_noisy_alpaca_sft/: b2_noisy_alpaca.ipynb  train.py
benchmarks/b3_dp_sgd/: README.md  baselines.py  models.py  train.py
benchmarks/b3_long_tail_cifar100/: train.py
benchmarks/b4_continual_learning/: README.md  ablation_conflict_test.py  dataset.py  train.py
benchmarks/b4_dp_sgd/: README.md  baselines.py  train.py
benchmarks/b4_long_tail_cifar100/: b4_long_tail_cifar100.ipynb  train.py
benchmarks/b5_gan_stability/: README.md  run_all_experiments.py  train.py
benchmarks/b5_noisy_timeseries/: README.md  train.py
benchmarks/b6_noisy_instruct/: README.md  b6_noisy_instruct.ipynb  dataset.py  requirements.txt  train.py
benchmarks/b7_continual_learning/: README.md  ablation_conflict_test.py  b8_synthetic_conflict.py  dataset.py  report.ltx  train.py
benchmarks/b8_noisy_timeseries/: README.md  train.py
docs/: README.md  api-reference.md  faq.md  getting-started.md  migration-guide.md
examples/: README.md  basic_usage.py  comparing_optimizers.py  fine_tuning_llm.py  image_classification.py
research/: REDESIGN.md  validate_redesign.py
tests/: __init__.py  conftest.py  reproduce_ddea_fix.py  test_agar.py  test_agar_computation.py  test_calibration.py  test_confidence.py  test_dde_adapter.py  test_device_and_groups.py  test_edge_cases.py  test_integration.py  test_noise_robustness.py  test_optimizer_interface.py  test_state_dict.py
(+7 files in other folders)
